[tool.poetry]
name = "webhook-handler"
version = "0.1.0"
description = ""
authors = ["bjornrydahl <103646133+bjornrydahl@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
ftrack-python-api = "^2.5.4"
annotated-types = "^0.6.0"
anyio = "^3.7.1"
appdirs = "^1.4.4"
arrow = "^0.17.0"
certifi = "^2023.11.17"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
clique = "^1.6.1"
colorama = "^0.4.6"
future = "^0.18.3"
h11 = "^0.14.0"
httptools = "^0.6.1"
idna = "^3.6"
pydantic-core = "^2.14.5"
pydantic = "^2.5.2"
pyparsing = "^2.4.7"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
six = "^1.16.0"
sniffio = "^1.3.0"
starlette = "^0.27.0"
typing-extensions = "^4.8.0"
urllib3 = "^2.1.0"
uvloop = "^0.19.0"
watchfiles = "^0.21.0"
websocket-client = "^0.59.0"
websockets = "^12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
