[tool.poetry]
name = "webhook-handler"
version = "0.1.0"
description = ""
authors = ["bjornrydahl <103646133+bjornrydahl@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
ftrack-python-api = "^2.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
